[workspace]
members = ["crates/haze", "crates/haze_core"]

[workspace.dependencies]
haze_core = { path = "crates/haze_core" }

clap = { version = "4.0.19", features = ["derive"] }
glob = "0.3.0"
miette = { version = "5.3.0", features = ["fancy"] }
owo-colors = "3.5.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
