[package]
name = "haze"
version = "1.3.0"
description = "A simple command line tool to manage your Minecraft Bedrock worlds"
author = "Arexon <arexonreal@gmail.com>"
edition = "2021"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
miette = { version = "5.3.0", features = ["fancy"] }
haze_core = { path = "../haze_core" }