[package]
name = "haze"
version = "1.4.0"
description = "A simple command line tool to manage your Minecraft Bedrock worlds"
author = "Arexon <arexonreal@gmail.com>"
edition = "2021"

[dependencies]
clap.workspace = true
haze_core.workspace = true
miette.workspace = true
owo-colors.workspace = true
serde_json.workspace = true
serde.workspace = true
