[package]
name = "haze_core"
version = "1.3.0"
edition = "2021"
description = "A simple command line tool to manage your Minecraft Bedrock worlds"
author = "Arexon <arexonreal@gmail.com>"
repository = "https://github.com/sedgeland/haze/"
license = "MIT"

[dependencies]
glob = "0.3.0"
miette = { version = "5.3.0", features = ["fancy"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
