[package]
name = "haze_core"
version = "1.3.0"
edition = "2021"
description = "A simple command line tool to manage your Minecraft Bedrock worlds"
author = "Arexon <arexonreal@gmail.com>"
repository = "https://github.com/sedgeland/haze/"
license = "MIT"

[dependencies]
glob.workspace = true
miette.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
